--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,13 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
-  region: "us-west-1"
-  app: "multi-docker"
-  env: "multi-docker-env"
+  region: us-west-1
+  app: multi-docker2
+  env: multiDocker2-env
   bucket_name: elasticbeanstalk-us-west-1-446948614406
-  bucket_path: "docker-multi"
+  bucket_path: docker-multi2
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    secure: $AWS_SECRET_KEY
