--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,4 @@ deploy:
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
     secure: $AWS_SECRET_KEY
+# after docker hub password in travisci
